# Bonnie_JacTest

./: BonnieURDF_latest.urdf  CMakeLists.txt  LeftRes.fig  Leg.cpp  Leg.h  Outputdata_left.txt  Outputdata_right.txt  Pinocchio_Utilities.cpp  Pinocchio_Utilities.h  README.md  RightRes.fig  TestData_Static.txt  TestData_Static_right.txt  calculate.cpp  calculate.h  dataPlot.m  main.cpp  matlab_test.m  motor_IvsT.m  quill_outputdata.txt  tmp_test.m
meshes/: l_ankle_link.STL  l_knee_link.STL  l_pas1_link.STL  l_pas2_link.STL  l_pitch_link.STL  l_roll_link.STL  l_yaw_link.STL  r_ankle_link.STL  r_knee_link.STL  r_pas1_link.STL  r_pas2_link.STL  r_pitch_link.STL  r_roll_link.STL  r_yaw_link.STL
